tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_enums_errors_on_repeated_match_variables_in_pattern/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Variable `_x` was already defined in the same match pattern
  ┌─ src/main.nr:4:14
  │
4 │             (_x, _x) => (),
  │              --  -- `_x` redefined here
  │              │    
  │              `_x` was previously defined here
  │

Aborting due to 1 previous error
